--- a/grafo/templates/grafo/tela-inicial.html
+++ b/grafo/templates/grafo/tela-inicial.html
@@ -17,6 +17,6 @@
             <li>Luiz Neto</li>
         </ul>
     </div>
-    <a href="{% url 'index' %}">Começar</a>
+    <a href="{% url 'processar_grafo' %}">Ir para o formulário</a>
 </body>
 </html>
