melhorei o forms.py e o views.py

--- a/grafo/templates/grafo/resultado.html
+++ b/grafo/templates/grafo/resultado.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="{ % static 'css/styles.css' % }">
     <title>Resultado do Menor Caminho</title>
-    <style> /* Adicione seu CSS aqui */ </style>
 </head>
 <body>
     <h1>Resultado do Cálculo</h1>
@@ -27,6 +26,6 @@
     {% endif %}
 
     <br>
-    <a href="{% url 'processar_grafo' %}">Calcular novamente</a>
+    <a href="{% url 'index' %}">Calcular novamente</a>
 </body>
 </html>
