--- a/grafo/templates/grafo/index.html
+++ b/grafo/templates/grafo/index.html
@@ -14,115 +14,10 @@
 
         <form action="{% url 'processar_grafo' %}" method="post">
             {% csrf_token %}
-
-            <div class="formularios">
-                <label for="vertices">1. Vértices Definidos</label>
-                <span class="instructions">Digite os nomes dos vértices, separados por vírgula.</span>
-                <input type="text" id="vertices" name="vertices" placeholder="Ex: A, B, C, D" >
-            </div>
-            <br>
-            <div class="formularios">
-                <label for="arestas">2. Arestas (Conexões) e Pesos</label>
-                <span class="instructions">Digite uma aresta por linha, no formato: Origem,Destino,Peso</span>
-                <br>
-                <textarea id="arestas" name="arestas" placeholder="Ex:&#10;A,B,7&#10;A,C,3&#10;C,B,1" ></textarea>
-            </div>
-            <br>
-            <div class="formularios">
-                <label for="ponto_partida">3. Ponto de Partida</label>
-                <input type="text" id="ponto_partida" name="ponto_partida" placeholder="Ex: A" >
-            </div>
-            <br>
-            <div class="formularios">
-                <label for="ponto_destino">4. Ponto de Destino</label>
-                <input type="text" id="ponto_destino" name="ponto_destino" placeholder="Ex: D" >
-            </div>
-            <button type="submit">Salvar Grafo</button>
+            {{form}}
+            <input type="submit" value="Calcular Grafo">
         </form>
     </div>
-</body>
-</html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- {% load static %}
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-    <title>Projeto Grafo</title>
-</head>
-<body>
-
-    <h1>Projeto Grafo</h1>
-    <div>
-        <form action="" method="post">
-            {% csrf_token %}
-            <label for="numero_vertices-input">Defina quantas vértices existem no grafo:</label><br>
-            <input type="number" id="numero_vertices" name="numero_vertices" placeholder="Ex: 5" min="1" required><br>
-            <button type="submit" id="btn1">Prosseguir</button>
-        </form>
-    </div>
-    
-    {% if tamanho_vertices %}
-        <div>
-            <form action="" method="post">
-                {% csrf_token %}
-                <label>Insira a letra e a quantidade de arestas de cada vértice:</label><br>
-                {% for i in tamanho_vertices %}
-                    <hr>
-                    <input type="text" name="nome_vertice" pattern="[a-zA-Z]" placeholder="Ex: A (A-Z)" required><br>
-                    <input type="number" name="numero_arestas" placeholder="Número de arestas" min="0" required><br>
-                {% endfor %}
-                
-                <button type="submit" id="btn2">Prosseguir</button>
-
-            </form>
-        </div>      
-    {% endif %}
-
-    {% if nome_vertices %}
-        <div>
-            <p>Marque quais são as ligações das arestas:</p><br>
-            
-            {% for nome in nome_vertices %}
-            <input type="checkbox" name="ligacoes" value="{{ nome }}">
-            <label>
-                Aresta de {{ nome }} para {{ nome }}
-            </label>
-            <input type="number" placeholder ='Peso da aresta: ex: 5' min="1" name="peso_arestas"><br>
-        {% endfor %}
-
-            <button type="submit">Enviar</button>
-        </div>
-    {% endif %}
-     -->
-
-    <!-- {% if nome_vertices %}
-        <div>
-            <p>Marque quais são as ligações das arestas:</p><br>
-            <ul>
-                {% for nome in nome_vertices %}
-                    <li>{{ nome }}</li>
-                {% endfor %}
-            </ul>
-            <button type="submit">Enviar</button>
-        </div>
-    {% endif %} -->
-
-<!-- <script src="{% static 'js/script.js' %}"></script> -->
+    <script src="{% static 'js/scripts.js' %}"></script>
 </body>
 </html>
