--- a/grafo/templates/grafo/resultado.html
+++ b/grafo/templates/grafo/resultado.html
@@ -4,13 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="{ % static 'css/styles.css' % }">
-    <title>Resultado do Menor Caminho</title>
+    <title>Resultado do Dijikastra</title>
 </head>
 <body>
-    <h1>Resultado do Cálculo</h1>
+    <h1>Resultado do Dijikastra</h1>
 
     {% if caminho %}
-        <h2>Menor Caminho Encontrado!</h2>
         <p>O menor caminho de <strong>{{ caminho.0 }}</strong> até <strong>{{ caminho|last }}</strong> é:</p>
         <h3>{{ caminho|join:" -> " }}</h3>
         <p><strong>Distância Total:</strong> {{ distancia }}</p>
