--- a/grafo/templates/grafo/matriz.html
+++ b/grafo/templates/grafo/matriz.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <title>Criar Matriz</title>
 </head>
 <body>
@@ -36,5 +37,6 @@
         <br>
         <button type="submit">Calcular Menor Caminho</button>
     </form>
+    <script src="{% static 'js/scripts.js' %}"></script>
 </body>
 </html>
