--- a/grafo/templates/grafo/resultado.html
+++ b/grafo/templates/grafo/resultado.html
@@ -20,5 +20,6 @@
 
     <br>
     <a href="{% url 'index' %}">Calcular novamente</a>
+    <script src="{% static 'js/scripts.js' %}"></script>
 </body>
 </html>
