--- a/grafo/templates/grafo/tela_inicial.html
+++ b/grafo/templates/grafo/tela_inicial.html
@@ -18,5 +18,6 @@
         </ul>
     </div>
     <a href="{% url 'index' %}">Ir construir grafo</a>
+    <script src="{% static 'js/scripts.js' %}"></script>
 </body>
 </html>
