--- a/grafo/templates/grafo/tela_inicial.html
+++ b/grafo/templates/grafo/tela_inicial.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'css/tela_inicial.css' %}">
     <title>Tela inicial</title>
 </head>
 <body>
@@ -18,6 +19,6 @@
         </ul>
     </div>
     <a href="{% url 'index' %}">Ir construir grafo</a>
-    <script src="{% static 'js/scripts.js' %}"></script>
+    <script src="{% static 'js/script.js' %}"></script>
 </body>
 </html>
